@@ -15,4 +15,3 @@ public class Main {
         });
     }
 }
-//jlink --module-path $JAVA_HOME/jmods  --add-modules java.base,java.desktop,java.security.sasl,java.security.jgss,java.naming,java.xml.crypto --output E:\workspace\ATTT\out\artifacts\ATTT_jar\custom-jre2 --strip-debug --no-header-files --no-man-pages --compress=2
